--- a/semana01/index.html
+++ b/semana01/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracking</title>
+    <title>Trackgenix S.A.</title>
 </head>
 <body>
-    
+    <h1>Trackgenix S.A.</h1>
+    <hr>
+    <h2>What is Trackgenix?</h2>
+    <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+    </p>
+
 </body>
 </html>
