I finished the file html

--- a/semana01/index.html
+++ b/semana01/index.html
@@ -1,20 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/8bedfba391.js" crossorigin="anonymous"></script>
     <title>Trackgenix S.A.</title>
 </head>
 <body>
-    <h1>Trackgenix S.A.</h1>
+    <header>
+        <i class="fa-solid fa-bars"></i>
+        <h1>Trackgenix S.A.</h1>
+        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a>
+        <a href="https://www.instagram.com/?hl=es-la"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+    </header>
     <hr>
-    <h2>What is Trackgenix?</h2>
-    <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-    </p>
+    <section>
+        <article>
+            <h2>Menu</h2>
+            <a href="#">Home</a>
+            <a href="#">Sign up</a>
+            <a href="#">Log in</a>
+            <a href="#">Contact info.</a>
+        </article>
+        <article>
+            <h3>What is Trackgenix?</h3>
+            <img src="img/first.jpg" width="400" />
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <a href="#">Learn more</a>
+            
+        </article>
+        <article>
+            <h4>functionalities</h4>
+            <i class="fa-solid fa-pencil"></i>
+            <p>hours log</p>
+            <p>
+                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
+                 Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+            </p>
+            <i class="fa-solid fa-file"></i>
+            <p>Reports</p>
+            <p>
+                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
+                 Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+            </p>
+            <i class="fa-solid fa-folder"></i>
+            <p>Resources management</p>
+            <p>
+                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
+                Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+            </p>
+            <i class="fa-solid fa-file"></i>
+            <p>Multiple roles</p>
+            <p>
+                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
+                Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+            </p>
+        </article>
+    </section>
+    <div>
+        <h5>Why Trackgenix?</h5>
+        <img src="img/second.jpg" width="400">
+        <ul>
+            <li>Productivity booster</li>
+            <li>Work traceability</li>
+            <li>Leadership and team management</li>
+            <li>Decision making</li>
+        </ul>
+        <a href="#">More</a>
+    </div>
+    <div>
+        <h6>How can we help you?</h6>
+        <form action="/formulario" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email">
+            <label for="message">Enter your message</label>
+            <textarea id="message" name="message"></textarea>
+            <button type="submit">Send message</button>
+            <button type="reset">Reset</button>
+        </form>
+    </div>
+    <section>
+        <article>
+            <h7>Our History</h7>
+            <p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
+                Vestibulum ante ipsum primis in faucibus vestibulum. 
+                Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
+                Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. 
+                Vestibulum ante ipsum primis sagittis eget. tempus euismod. 
+                Vestibulum ante ipsum primis in faucibus vestibulum. 
+                Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
+                Integer ac pellentesque praesent.
+                Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. 
+                Vestibulum ante ipsum primis in faucibus vestibulum. 
+                Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
+            </p>
+            <img src="img/third.jpg" width="400">
+        </article>
+    </section>
+    <div>
+        <p>Products</p>
+        <ul>
+            <li>Funcionalidades</li>
+            <li>Descargas</li>
+            <li>Integraciones</li>
+            <li>Extras</li>
+        </ul>
+        <p>Company</p>
+        <ul>
+            <li>Acerca de nosotros</li>
+            <li>Clientes</li>    
+            <li>Recursos</li>   
+            <li>Blog</li>                
+        </ul>
+        <p>Support</p>
+        <ul>
+            <li>Ayuda</li>
+            <li>Tutoriales</li>    
+            <li>API</li>    
+            <li>Contact</li>    
+        </ul>
+    </div>
+    <hr>
+
+    <footer>
+        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a>
+        <a href="https://www.instagram.com/?hl=es-la"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+        <p>Copyright © 2022 Trackgenix. All rights reserved.</p>
+    </footer>
+    
+
 
 </body>
 </html>
