--- a/semana01/index.html
+++ b/semana01/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <i class="fa-solid fa-bars"></i>
+        <a href="#"><i class="fa-solid fa-bars"></i></a>
         <h1>Trackgenix S.A.</h1>
         <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a>
         <a href="https://www.instagram.com/?hl=es-la"><i class="fa-brands fa-instagram"></i></a>
@@ -15,80 +15,87 @@
         <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
     </header>
     <hr>
-    <section>
-        <article>
+    <section id="inicio">
+        <article id="menu">
             <h2>Menu</h2>
             <a href="#">Home</a>
             <a href="#">Sign up</a>
             <a href="#">Log in</a>
             <a href="#">Contact info.</a>
         </article>
-        <article>
+        <article id="what is">
             <h3>What is Trackgenix?</h3>
-            <img src="img/first.jpg" width="400" />
+            <img src="img/first.jpg" width="400" alt="notebook" />
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                 when an unknown printer took a galley of type and scrambled it to make a type specimen book.
             </p>
             <a href="#">Learn more</a>
-            
         </article>
-        <article>
+        <article id="functionalities">
             <h4>functionalities</h4>
             <i class="fa-solid fa-pencil"></i>
-            <p>hours log</p>
+            <h5>hours log</h5>
             <p>
                 Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
                  Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
             </p>
             <i class="fa-solid fa-file"></i>
-            <p>Reports</p>
+            <h6>Reports</h6>
             <p>
                 Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
                  Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
             </p>
             <i class="fa-solid fa-folder"></i>
-            <p>Resources management</p>
+            <h7>Resources management</h7>
             <p>
                 Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
                 Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
             </p>
             <i class="fa-solid fa-file"></i>
-            <p>Multiple roles</p>
+            <h8>Multiple roles</h8>
             <p>
                 Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
                 Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
             </p>
         </article>
     </section>
-    <div>
-        <h5>Why Trackgenix?</h5>
-        <img src="img/second.jpg" width="400">
-        <ul>
-            <li>Productivity booster</li>
-            <li>Work traceability</li>
-            <li>Leadership and team management</li>
-            <li>Decision making</li>
-        </ul>
-        <a href="#">More</a>
-    </div>
-    <div>
-        <h6>How can we help you?</h6>
-        <form action="/formulario" method="post">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email">
-            <label for="message">Enter your message</label>
-            <textarea id="message" name="message"></textarea>
-            <button type="submit">Send message</button>
-            <button type="reset">Reset</button>
-        </form>
-    </div>
-    <section>
-        <article>
-            <h7>Our History</h7>
+    <section id="middle">
+        <article id="why">
+            <h9>Why Trackgenix?</h9>
+            <img src="img/second.jpg" width="400" alt="work space">
+            <ul>
+                <li>Productivity booster</li>
+                <li>Work traceability</li>
+                <li>Leadership and team management</li>
+                <li>Decision making</li>
+            </ul>
+            <a href="#">More</a>
+        </article>   
+        <article id="help">
+            <h10>How can we help you?</h10>
+            <form action="/formulario" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email">
+                <select>
+                    <option></option>
+                    <option>Human resourses</option>
+                    <option>Admin</option>
+                    <option>Employee</option>
+                </select>
+                <label for="message">Enter your message</label>
+                <textarea id="message" name="message"></textarea>
+                <button type="submit">Send message</button>
+                <button type="reset">Reset</button>
+            </form>
+        </article>
+    </section>
+    <section id="about us">
+        <article id="history">
+            <h11>Our History</h11>
             <p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
                 Vestibulum ante ipsum primis in faucibus vestibulum. 
                 Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
@@ -101,32 +108,38 @@
                 Vestibulum ante ipsum primis in faucibus vestibulum. 
                 Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
             </p>
-            <img src="img/third.jpg" width="400">
+            <img src="img/third.jpg" width="400" alt="edifice">
         </article>
     </section>
-    <div>
-        <p>Products</p>
-        <ul>
-            <li>Funcionalidades</li>
-            <li>Descargas</li>
-            <li>Integraciones</li>
-            <li>Extras</li>
-        </ul>
-        <p>Company</p>
-        <ul>
-            <li>Acerca de nosotros</li>
-            <li>Clientes</li>    
-            <li>Recursos</li>   
-            <li>Blog</li>                
-        </ul>
-        <p>Support</p>
-        <ul>
-            <li>Ayuda</li>
-            <li>Tutoriales</li>    
-            <li>API</li>    
-            <li>Contact</li>    
-        </ul>
-    </div>
+    <section id="end">
+        <article id="products">
+            <p>Products</p>
+            <ul>
+                <a href="#"><li>Funcionalidades</li></a>
+                <a href="#"><li>Descargas</li></a>
+                <a href="#"><li>Integraciones</li></a>
+                <a href="#"><li>Extras</li></a>
+            </ul>
+        </article>
+        <article id="company">    
+            <p>Company</p>
+            <ul>
+                <a href="#"><li>Acerca de nosotros</li></a>
+                <a href="#"><li>Clientes</li></a>
+                <a href="#"><li>Recursos</li></a>
+                <a href="#"><li>Blog</li></a>               
+            </ul>
+        </article>
+        <article id="support">
+            <p>Support</p>
+            <ul>
+                <a href="#"><li>Ayuda</li></a>
+                <a href="#"><li>Tutoriales</li></a>
+                <a href="#"><li>API</li></a>
+                <a href="#"><li>Contact</li></a>   
+            </ul>
+        </article>
+    </section>
     <hr>
 
     <footer>
