--- a/semana01/index.html
+++ b/semana01/index.html
@@ -14,8 +14,9 @@
         <a href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
         <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
     </header>
-    <hr>
+    
     <section id="inicio">
+        <hr>
         <article id="menu">
             <h2>Menu</h2>
             <a href="#">Home</a>
@@ -23,7 +24,7 @@
             <a href="#">Log in</a>
             <a href="#">Contact info.</a>
         </article>
-        <article id="what is">
+        <article id="what-is">
             <h3>What is Trackgenix?</h3>
             <img src="img/first.jpg" width="400" alt="notebook" />
             <p>
@@ -81,7 +82,6 @@
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email">
                 <select>
-                    <option></option>
                     <option>Human resourses</option>
                     <option>Admin</option>
                     <option>Employee</option>
@@ -93,7 +93,7 @@
             </form>
         </article>
     </section>
-    <section id="about us">
+    <section id="about-us">
         <article id="history">
             <h11>Our History</h11>
             <p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
@@ -139,8 +139,9 @@
                 <a href="#"><li>Contact</li></a>   
             </ul>
         </article>
+        <hr>
     </section>
-    <hr>
+    
 
     <footer>
         <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a>
