--- a/semana01/index.html
+++ b/semana01/index.html
@@ -77,17 +77,14 @@
         <article id="help">
             <h10>How can we help you?</h10>
             <form action="/formulario" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
+                <input type="text" id="name" name="name" placeholder="Name">
+                <input type="email" id="email" name="email" placeholder="Email">
                 <select>
                     <option>Human resourses</option>
                     <option>Admin</option>
                     <option>Employee</option>
                 </select>
-                <label for="message">Enter your message</label>
-                <textarea id="message" name="message"></textarea>
+                <textarea id="message" name="message" placeholder="Enter your message"></textarea>
                 <button type="submit">Send message</button>
                 <button type="reset">Reset</button>
             </form>
@@ -116,25 +113,25 @@
             <p>Products</p>
             <ul>
                 <a href="#"><li>Funcionalidades</li></a>
-                <a href="#"><li>Descargas</li></a>
-                <a href="#"><li>Integraciones</li></a>
-                <a href="#"><li>Extras</li></a>
+                <a href="#"><li>downloads</li></a>
+                <a href="#"><li>integrations</li></a>
+                <a href="#"><li>Additional features</li></a>
             </ul>
         </article>
         <article id="company">    
             <p>Company</p>
             <ul>
-                <a href="#"><li>Acerca de nosotros</li></a>
-                <a href="#"><li>Clientes</li></a>
-                <a href="#"><li>Recursos</li></a>
+                <a href="#"><li>About us</li></a>
+                <a href="#"><li>Customers</li></a>
+                <a href="#"><li>Resources</li></a>
                 <a href="#"><li>Blog</li></a>               
             </ul>
         </article>
         <article id="support">
             <p>Support</p>
             <ul>
-                <a href="#"><li>Ayuda</li></a>
-                <a href="#"><li>Tutoriales</li></a>
+                <a href="#"><li>Help</li></a>
+                <a href="#"><li>Tutorials</li></a>
                 <a href="#"><li>API</li></a>
                 <a href="#"><li>Contact</li></a>   
             </ul>
