--- a/semana01/index.html
+++ b/semana01/index.html
@@ -97,7 +97,8 @@
         </section>
         <section id="history">
             <h2>Our History</h2>
-            <p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
+            <p>
+                Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
                 Vestibulum ante ipsum primis in faucibus vestibulum. 
                 Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
                 Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. 
@@ -110,8 +111,10 @@
                 Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
             </p>
             <img src="img/third.jpg" width="400" alt="edifice">
+        </section>
+        <section id="columns">    
             <div>
-                <h3>Products</h3>
+                <h2>Products</h2>
                 <ul>
                     <li><a href="#">Funcionalidades</a></li>
                     <li><a href="#">downloads</a></li>
@@ -120,7 +123,7 @@
                 </ul>
             </div>
             <div>    
-                <h3>Company</h3>
+                <h2>Company</h2>
                 <ul>
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Customers</a></li>
@@ -129,7 +132,7 @@
                 </ul>
             </div>
             <div>
-                <h3>Support</h3>
+                <h2>Support</h2>
                 <ul>
                     <li><a href="#">Help</a></li>
                     <li><a href="#">Tutorials</a></li>
@@ -140,14 +143,14 @@
         </section>
     
 
-    <footer>
-        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a>
-        <a href="https://www.instagram.com/?hl=es-la"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
-        <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
-        <p>Copyright © 2022 Trackgenix. All rights reserved.</p>
-    </footer>
+        <footer>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/?hl=es-la"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+            <p>Copyright © 2022 Trackgenix. All rights reserved.</p>
+        </footer>
     
 
 
