--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -90,7 +90,7 @@
             </section> 
             <section id="help">
                 <h2>How can we help you?</h2>
-                <form action="/formulario" method="post">
+                <form>
                     <input class="controls" type="text" id="name" name="name" placeholder="Name">
                     <input class="controls" type="email" id="email" name="email" placeholder="Email">
                     <select>
@@ -99,8 +99,8 @@
                         <option>Employee</option>
                     </select>
                     <textarea id="message" name="message" placeholder="Enter your message"></textarea>
-                    <button type="submit">Send message</button>
-                    <button type="reset">Reset</button>
+                    <button class="btn btn-orange" type="submit">Send message</button>
+                    <button class="btn" type="reset">Reset</button>
                 </form>
             </section>
             <section id="history">
