BaSP-2022: finish our story and footer

--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -5,6 +5,7 @@
         <title>Trackgenix S.A.</title>
         <link rel="stylesheet" href="reset.css"/>
         <link rel="stylesheet" href="style.css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
@@ -41,11 +42,11 @@
             </section>
 
             <section id="functionalities">
-                <h2>functionalities</h2>
+                <h2>Functionalities</h2>
                 <div id="fun-list">
                     <div class="fun-item">
                         <i class="fa-solid fa-pencil"></i>
-                        <h3>hours log</h3>
+                        <h3>Hours log</h3>
                         <p>
                             Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
                             Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
@@ -120,42 +121,46 @@
                 </p>
                 <img src="img/third.jpg" width="400" alt="edifice">
             </section>
-            <section id="columns">    
-                <div>
-                    <h2>Products</h2>
-                    <ul>
-                        <li><a href="#">Funcionalidades</a></li>
-                        <li><a href="#">downloads</a></li>
-                        <li><a href="#">integrations</a></li>
-                        <li><a href="#">Additional features</a></li>
-                    </ul>
-                </div>
-                <div>    
-                    <h2>Company</h2>
-                    <ul>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Customers</a></li>
-                        <li><a href="#">Resources</a></li>
-                        <li><a href="#">Blog</a></li>              
-                    </ul>
-                </div>
-                <div>
-                    <h2>Support</h2>
-                    <ul>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Tutorials</a></li>
-                        <li><a href="#">API</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
+            <section class="columns">
+                <div class="box-list">
+                    <div class="c-item">
+                        <h2>Products</h2>
+                        <ol class="c-list">
+                            <li><a href="#">Functionalities</li>
+                            <li><a href="#">Downloads</a></li>
+                            <li><a href="#">Integrations</a></li>
+                            <li><a href="#">Additional features</a></li>
+                        </ol>
+                    </div>
+                    <div class="c-item">    
+                        <h2>Company</h2>
+                        <ol class="c-list">
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Customers</a></li>
+                            <li><a href="#">Resources</a></li>
+                            <li><a href="#">Blog</a></li>              
+                        </ol>
+                    </div>
+                    <div class="c-item">
+                        <h2>Support</h2>
+                        <ol class="c-list">
+                            <li><a href="#">Help</a></li>
+                            <li><a href="#">Tutorials</a></li>
+                            <li><a href="#">API</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ol>
+                    </div>
                 </div>
             </section>
           </main>
         <footer>
-            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a>
-            <a href="https://www.instagram.com/?hl=es-la"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+            <ul class="foot-l">
+                <li class="foot-i"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a></li>
+                <li class="foot-i"><a href="https://www.instagram.com/?hl=es-la"><i class="fa-brands fa-instagram"></i></a></li>
+                <li class="foot-i"><a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a></li>
+                <li class="foot-i"><a href="https://ar.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="foot-i"><a href="https://github.com/"><i class="fa-brands fa-github"></i></a></li>
+            </ul>
             <p>Copyright © 2022 Trackgenix. All rights reserved.</p>
         </footer>
 
