BaSP-2022: Finished project

--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -20,7 +20,7 @@
             </ul>   
         </header>
         <nav>
-            <input type="text" id="serch" placeholder="Serch">
+            <input type="text" id="search" placeholder="Search">
             <h2>Menu</h2>
             <ul class="bar">
                 <li class="link"><a href="#">Home</a></li>
