--- a/semana-04/index.html
+++ b/semana-04/index.html
@@ -4,7 +4,11 @@
         <script src="https://kit.fontawesome.com/8bedfba391.js" crossorigin="anonymous"></script>
         <title>Trackgenix S.A.</title>
         <link rel="stylesheet" href="reset.css"/>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="css/styles.css"/>
+        <link rel="stylesheet" href="css/header.css"/>
+        <link rel="stylesheet" href="css/main.css"/>
+        <link rel="stylesheet" href="css/sidebar.css"/>
+        <link rel="stylesheet" href="css/footer.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -21,7 +25,7 @@
         </header>
         <nav>
             <input type="text" id="search" placeholder="Search">
-            <h2>Menu</h2>
+            <p>Menu</p>
             <ul class="bar">
                 <li class="link"><a href="#">Home</a></li>
                 <li class="link"><a href="#">Sign up</a></li>
@@ -31,8 +35,8 @@
         </nav>
         <main>
             <section id="what-is">
+                <img src="img/first.jpg" alt="notebook" />
                 <h2>What is Trackgenix?</h2>
-                <img src="img/first.jpg" width="400" alt="notebook" />
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -79,8 +83,8 @@
                 </div>    
             </section>
             <section id="why">
-                <h2>Why Trackgenix?</h2>
                 <img src="img/second.jpg" width="400" alt="work space">
+                <h2>Why Trackgenix?</h2>
                 <ul class="us">
                     <li class="item">Productivity booster</li>
                     <li class="item">Work traceability</li>
