BaSP-2022: modify the main section for mobile and desktop

--- a/semana-04/index.html
+++ b/semana-04/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/8bedfba391.js" crossorigin="anonymous"></script>
         <title>Trackgenix S.A.</title>
         <link rel="stylesheet" href="reset.css"/>
@@ -35,16 +38,17 @@
         </nav>
         <main>
             <section id="what-is">
-                <img src="img/first.jpg" alt="notebook" />
-                <h2>What is Trackgenix?</h2>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                </p>
-                <a href="#" class="btn">Learn more</a>
+                <img src="img/first.jpg" alt="notebook" width="100%"/>
+                <div class="what-info">
+                    <h2>What is Trackgenix?</h2>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <button href="#" class="btn">Learn more</button>
+                </div>
             </section>
-
             <section id="functionalities">
                 <h2>Functionalities</h2>
                 <div id="fun-list">
@@ -83,7 +87,7 @@
                 </div>    
             </section>
             <section id="why">
-                <img src="img/second.jpg" width="400" alt="work space">
+                <img src="img/second.jpg" alt="work space">
                 <h2>Why Trackgenix?</h2>
                 <ul class="us">
                     <li class="item">Productivity booster</li>
@@ -109,6 +113,7 @@
                 </form>
             </section>
             <section id="history">
+                <img src="img/third.jpg" width="400" alt="edifice">
                 <h2>Our History</h2>
                 <p>
                     Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
@@ -123,37 +128,34 @@
                     Vestibulum ante ipsum primis in faucibus vestibulum. 
                     Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
                 </p>
-                <img src="img/third.jpg" width="400" alt="edifice">
             </section>
             <section class="columns">
-                <div class="box-list">
-                    <div class="c-item">
-                        <h2>Products</h2>
-                        <ol class="c-list">
-                            <li><a href="#">Functionalities</li>
-                            <li><a href="#">Downloads</a></li>
-                            <li><a href="#">Integrations</a></li>
-                            <li><a href="#">Additional features</a></li>
-                        </ol>
-                    </div>
-                    <div class="c-item">    
-                        <h2>Company</h2>
-                        <ol class="c-list">
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Customers</a></li>
-                            <li><a href="#">Resources</a></li>
-                            <li><a href="#">Blog</a></li>              
-                        </ol>
-                    </div>
-                    <div class="c-item">
-                        <h2>Support</h2>
-                        <ol class="c-list">
-                            <li><a href="#">Help</a></li>
-                            <li><a href="#">Tutorials</a></li>
-                            <li><a href="#">API</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ol>
-                    </div>
+                <div class="c-item">
+                    <h3>Products</h3>
+                    <ol class="c-list">
+                        <li><a href="#">Functionalities</li>
+                        <li><a href="#">Downloads</a></li>
+                        <li><a href="#">Integrations</a></li>
+                        <li><a href="#">Additional features</a></li>
+                    </ol>
+                </div>
+                <div class="c-item">    
+                    <h3>Company</h3>
+                    <ol class="c-list">
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Customers</a></li>
+                        <li><a href="#">Resources</a></li>
+                        <li><a href="#">Blog</a></li>              
+                    </ol>
+                </div>
+                <div class="c-item">
+                    <h3>Support</h3>
+                    <ol class="c-list">
+                        <li><a href="#">Help</a></li>
+                        <li><a href="#">Tutorials</a></li>
+                        <li><a href="#">API</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ol>
                 </div>
             </section>
           </main>
