--- a/semana-04/index.html
+++ b/semana-04/index.html
@@ -16,8 +16,10 @@
     </head>
     <body>
         <header>
-            <a href="#" class="hamb"><i class="fa-solid fa-bars"></i></a>
-            <h1>Trackgenix S.A.</h1>
+            <div class="htitle">
+                <a href="#" class="hamb"><i class="fa-solid fa-bars"></i></a>
+                <h1>Trackgenix S.A.</h1>
+            </div>
             <ul class="iconlist">
                 <li class="icon"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a></li>
                 <li class="icon"><a href="https://www.instagram.com/?hl=es-la"><i class="fa-brands fa-instagram"></i></a></li>
@@ -26,139 +28,141 @@
                 <li class="icon"><a href="https://github.com/"><i class="fa-brands fa-github"></i></a></li>
             </ul>   
         </header>
-        <nav>
-            <input type="text" id="search" placeholder="Search">
-            <p>Menu</p>
-            <ul class="bar">
-                <li class="link"><a href="#">Home</a></li>
-                <li class="link"><a href="#">Sign up</a></li>
-                <li class="link"><a href="#">Log in</a></li>
-                <li class="link"><a href="#">Contact info.</a></li>
-            </ul>
-        </nav>
-        <main>
-            <section id="what-is">
-                <img src="img/first.jpg" alt="notebook" width="100%"/>
-                <div class="what-info">
-                    <h2>What is Trackgenix?</h2>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    </p>
-                    <button href="#" class="btn">Learn more</button>
-                </div>
-            </section>
-            <section id="functionalities">
-                <h2>Functionalities</h2>
-                <div id="fun-list">
-                    <div class="fun-item">
-                        <i class="fa-solid fa-pencil"></i>
-                        <h3>Hours log</h3>
-                        <p>
-                            Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
-                            Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                        </p>
-                    </div>
-                    <div class="fun-item">
-                        <i class="fa-solid fa-file"></i>
-                        <h3>Reports</h3>
-                        <p>
-                            Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
-                            Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                        </p>
-                    </div>
-                    <div class="fun-item">
-                        <i class="fa-solid fa-folder"></i>
-                        <h3>Resources management</h3>
-                        <p>
-                            Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
-                            Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                        </p>
-                    </div>
-                    <div class="fun-item">
-                        <i class="fa-solid fa-file"></i>
-                        <h3>Multiple roles</h3>
-                        <p>
-                            Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
-                            Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                        </p>
-                    </div>
-                </div>    
-            </section>
-            <section id="why">
-                <img src="img/second.jpg" alt="work space">
-                <h2>Why Trackgenix?</h2>
-                <ul class="us">
-                    <li class="item">Productivity booster</li>
-                    <li class="item">Work traceability</li>
-                    <li class="item">Leadership and team management</li>
-                    <li class="item">Decision making</li>
+        <div class="conteiner">
+            <nav>
+                <input type="text" id="search" placeholder="Search">
+                <p>Menu</p>
+                <ul class="bar">
+                    <li class="link"><a href="#">Home</a></li>
+                    <li class="link"><a href="#">Sign up</a></li>
+                    <li class="link"><a href="#">Log in</a></li>
+                    <li class="link"><a href="#">Contact info.</a></li>
                 </ul>
-                <a href="#" class="btn">More</a>
-            </section> 
-            <section id="help">
-                <h2>How can we help you?</h2>
-                <form>
-                    <input class="controls" type="text" id="name" name="name" placeholder="Name">
-                    <input class="controls" type="email" id="email" name="email" placeholder="Email">
-                    <select>
-                        <option>Human resourses</option>
-                        <option>Admin</option>
-                        <option>Employee</option>
-                    </select>
-                    <textarea id="message" name="message" placeholder="Enter your message"></textarea>
-                    <button class="btn btn-orange" type="submit">Send message</button>
-                    <button class="btn" type="reset">Reset</button>
-                </form>
-            </section>
-            <section id="history">
-                <img src="img/third.jpg" width="400" alt="edifice">
-                <h2>Our History</h2>
-                <p>
-                    Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
-                    Vestibulum ante ipsum primis in faucibus vestibulum. 
-                    Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
-                    Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. 
-                    Vestibulum ante ipsum primis sagittis eget. tempus euismod. 
-                    Vestibulum ante ipsum primis in faucibus vestibulum. 
-                    Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
-                    Integer ac pellentesque praesent.
-                    Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. 
-                    Vestibulum ante ipsum primis in faucibus vestibulum. 
-                    Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
-                </p>
-            </section>
-            <section class="columns">
-                <div class="c-item">
-                    <h3>Products</h3>
-                    <ol class="c-list">
-                        <li><a href="#">Functionalities</li>
-                        <li><a href="#">Downloads</a></li>
-                        <li><a href="#">Integrations</a></li>
-                        <li><a href="#">Additional features</a></li>
-                    </ol>
-                </div>
-                <div class="c-item">    
-                    <h3>Company</h3>
-                    <ol class="c-list">
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Customers</a></li>
-                        <li><a href="#">Resources</a></li>
-                        <li><a href="#">Blog</a></li>              
-                    </ol>
-                </div>
-                <div class="c-item">
-                    <h3>Support</h3>
-                    <ol class="c-list">
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Tutorials</a></li>
-                        <li><a href="#">API</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ol>
-                </div>
-            </section>
-          </main>
+            </nav>
+            <main>
+                <section id="what-is">
+                    <img src="img/first.jpg" alt="notebook" width="100%"/>
+                    <div class="what-info">
+                        <h2>What is Trackgenix?</h2>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        </p>
+                        <button href="#" class="btn">Learn more</button>
+                    </div>
+                </section>
+                <section id="functionalities">
+                    <h2>Functionalities</h2>
+                    <div id="fun-list">
+                        <div class="fun-item">
+                            <i class="fa-solid fa-pencil"></i>
+                            <h3>Hours log</h3>
+                            <p>
+                                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
+                                Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+                            </p>
+                        </div>
+                        <div class="fun-item">
+                            <i class="fa-solid fa-file"></i>
+                            <h3>Reports</h3>
+                            <p>
+                                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
+                                Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+                            </p>
+                        </div>
+                        <div class="fun-item">
+                            <i class="fa-solid fa-folder"></i>
+                            <h3>Resources management</h3>
+                            <p>
+                                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
+                                Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+                            </p>
+                        </div>
+                        <div class="fun-item">
+                            <i class="fa-solid fa-file"></i>
+                            <h3>Multiple roles</h3>
+                            <p>
+                                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
+                                Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+                            </p>
+                        </div>
+                    </div>    
+                </section>
+                <section id="why">
+                    <img src="img/second.jpg" width="100%" alt="work space">
+                    <h2>Why Trackgenix?</h2>
+                    <ul class="us">
+                        <li class="item">Productivity booster</li>
+                        <li class="item">Work traceability</li>
+                        <li class="item">Leadership and team management</li>
+                        <li class="item">Decision making</li>
+                    </ul>
+                    <a href="#" class="btn">More</a>
+                </section> 
+                <section id="help">
+                    <h2>How can we help you?</h2>
+                    <form>
+                        <input class="controls" type="text" id="name" name="name" placeholder="Name">
+                        <input class="controls" type="email" id="email" name="email" placeholder="Email">
+                        <select>
+                            <option>Human resourses</option>
+                            <option>Admin</option>
+                            <option>Employee</option>
+                        </select>
+                        <textarea id="message" name="message" placeholder="Enter your message"></textarea>
+                        <button class="btn btn-orange" type="submit">Send message</button>
+                        <button class="btn" type="reset">Reset</button>
+                    </form>
+                </section>
+                <section id="history">
+                    <img src="img/third.jpg" width="100%" alt="edifice">
+                    <h2>Our History</h2>
+                    <p>
+                        Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
+                        Vestibulum ante ipsum primis in faucibus vestibulum. 
+                        Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
+                        Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. 
+                        Vestibulum ante ipsum primis sagittis eget. tempus euismod. 
+                        Vestibulum ante ipsum primis in faucibus vestibulum. 
+                        Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
+                        Integer ac pellentesque praesent.
+                        Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. 
+                        Vestibulum ante ipsum primis in faucibus vestibulum. 
+                        Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
+                    </p>
+                </section>
+                <section class="columns">
+                    <div class="c-item">
+                        <h3>Products</h3>
+                        <ol class="c-list">
+                            <li><a href="#">Functionalities</li>
+                            <li><a href="#">Downloads</a></li>
+                            <li><a href="#">Integrations</a></li>
+                            <li><a href="#">Additional features</a></li>
+                        </ol>
+                    </div>
+                    <div class="c-item">    
+                        <h3>Company</h3>
+                        <ol class="c-list">
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Customers</a></li>
+                            <li><a href="#">Resources</a></li>
+                            <li><a href="#">Blog</a></li>              
+                        </ol>
+                    </div>
+                    <div class="c-item">
+                        <h3>Support</h3>
+                        <ol class="c-list">
+                            <li><a href="#">Help</a></li>
+                            <li><a href="#">Tutorials</a></li>
+                            <li><a href="#">API</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ol>
+                    </div>
+                </section>
+            </main>
+        </div>
         <footer>
             <ul class="foot-l">
                 <li class="foot-i"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-square"></i></a></li>
