BaSP-2022: start form section

--- a/semana-04/index.html
+++ b/semana-04/index.html
@@ -41,7 +41,7 @@
             </nav>
             <main>
                 <section id="what-is">
-                    <img src="img/first.jpg" alt="notebook" width="100%"/>
+                    <img src="img/first.jpg" width="80%" alt="notebook"/>
                     <div class="what-info">
                         <h2>What is Trackgenix?</h2>
                         <p>
@@ -57,48 +57,58 @@
                     <div id="fun-list">
                         <div class="fun-item">
                             <i class="fa-solid fa-pencil"></i>
-                            <h3>Hours log</h3>
-                            <p>
-                                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
-                                Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                            </p>
+                            <div class="fun-text">
+                                <h3>Hours log</h3>
+                                <p>
+                                    Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
+                                    Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+                                </p>
+                            </div>    
                         </div>
                         <div class="fun-item">
                             <i class="fa-solid fa-file"></i>
-                            <h3>Reports</h3>
-                            <p>
-                                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
-                                Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                            </p>
+                            <div class="fun-text">
+                                <h3>Reports</h3>
+                                <p>
+                                    Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.
+                                    Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+                                </p>
+                            </div>
                         </div>
                         <div class="fun-item">
                             <i class="fa-solid fa-folder"></i>
-                            <h3>Resources management</h3>
-                            <p>
-                                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
-                                Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                            </p>
+                            <div class="fun-text">
+                                <h3>Resources management</h3>
+                                <p>
+                                    Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
+                                    Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+                                </p>
+                            </div>
                         </div>
                         <div class="fun-item">
                             <i class="fa-solid fa-file"></i>
-                            <h3>Multiple roles</h3>
-                            <p>
-                                Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
-                                Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
-                            </p>
+                            <div class="fun-text">
+                                <h3>Multiple roles</h3>
+                                <p>
+                                    Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. 
+                                    Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.
+                                </p>
+                            </div>
                         </div>
                     </div>    
                 </section>
                 <section id="why">
-                    <img src="img/second.jpg" width="100%" alt="work space">
-                    <h2>Why Trackgenix?</h2>
-                    <ul class="us">
-                        <li class="item">Productivity booster</li>
-                        <li class="item">Work traceability</li>
-                        <li class="item">Leadership and team management</li>
-                        <li class="item">Decision making</li>
-                    </ul>
-                    <a href="#" class="btn">More</a>
+                    <img src="img/second.jpg" width="80%" alt="work space">
+                    <div class="why-info">
+                        <h2>Why Trackgenix?</h2>
+                        <ul class="us">
+                            <li class="item">Productivity booster</li>
+                            <li class="item">Work traceability</li>
+                            <li class="item">Leadership and team management</li>
+                            <li class="item">Decision making</li>
+                        </ul>
+                        <button href="#" class="btn">More</button>
+                    </div>
                 </section> 
                 <section id="help">
                     <h2>How can we help you?</h2>
