--- a/semana-04/index.html
+++ b/semana-04/index.html
@@ -41,7 +41,7 @@
             </nav>
             <main>
                 <section id="what-is">
-                    <img src="img/first.jpg" width="80%" alt="notebook"/>
+                    <img src="img/first.jpg" alt="notebook"/>
                     <div class="what-info">
                         <h2>What is Trackgenix?</h2>
                         <p>
@@ -121,26 +121,30 @@
                             <option>Employee</option>
                         </select>
                         <textarea id="message" name="message" placeholder="Enter your message"></textarea>
-                        <button class="btn btn-orange" type="submit">Send message</button>
-                        <button class="btn" type="reset">Reset</button>
+                        <div class="formbtn">
+                            <button class="btn btn-orange" type="submit">Send message</button>
+                            <button class="btn" type="reset">Reset</button>
+                        </div>
                     </form>
                 </section>
                 <section id="history">
                     <img src="img/third.jpg" width="100%" alt="edifice">
-                    <h2>Our History</h2>
-                    <p>
-                        Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
-                        Vestibulum ante ipsum primis in faucibus vestibulum. 
-                        Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
-                        Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. 
-                        Vestibulum ante ipsum primis sagittis eget. tempus euismod. 
-                        Vestibulum ante ipsum primis in faucibus vestibulum. 
-                        Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
-                        Integer ac pellentesque praesent.
-                        Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. 
-                        Vestibulum ante ipsum primis in faucibus vestibulum. 
-                        Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
-                    </p>
+                    <div class="texth">
+                        <h2>Our History</h2>
+                        <p>
+                            Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
+                            Vestibulum ante ipsum primis in faucibus vestibulum. 
+                            Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
+                            Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. 
+                            Vestibulum ante ipsum primis sagittis eget. tempus euismod. 
+                            Vestibulum ante ipsum primis in faucibus vestibulum. 
+                            Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
+                            Integer ac pellentesque praesent.
+                            Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. 
+                            Vestibulum ante ipsum primis in faucibus vestibulum. 
+                            Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
+                        </p>
+                    </div>
                 </section>
                 <section class="columns">
                     <div class="c-item">
