BaSP-2022: finshing details

--- a/semana-04/index.html
+++ b/semana-04/index.html
@@ -29,7 +29,7 @@
             </ul>   
         </header>
         <div class="conteiner">
-            <nav>
+            <aside>
                 <input type="text" id="search" placeholder="Search">
                 <p>Menu</p>
                 <ul class="bar">
@@ -38,7 +38,7 @@
                     <li class="link"><a href="#">Log in</a></li>
                     <li class="link"><a href="#">Contact info.</a></li>
                 </ul>
-            </nav>
+            </aside>
             <main>
                 <section id="what-is">
                     <img src="img/first.jpg" alt="notebook"/>
@@ -49,7 +49,7 @@
                             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                             when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                         </p>
-                        <button href="#" class="btn">Learn more</button>
+                        <a href="#" class="btn">Learn more</a>
                     </div>
                 </section>
                 <section id="functionalities">
@@ -98,7 +98,7 @@
                     </div>    
                 </section>
                 <section id="why">
-                    <img src="img/second.jpg" width="80%" alt="work space">
+                    <img src="img/second.jpg" alt="work space">
                     <div class="why-info">
                         <h2>Why Trackgenix?</h2>
                         <ul class="us">
@@ -107,7 +107,7 @@
                             <li class="item">Leadership and team management</li>
                             <li class="item">Decision making</li>
                         </ul>
-                        <button href="#" class="btn">More</button>
+                        <a href="#" class="btn">More</a>
                     </div>
                 </section> 
                 <section id="help">
@@ -128,7 +128,7 @@
                     </form>
                 </section>
                 <section id="history">
-                    <img src="img/third.jpg" width="100%" alt="edifice">
+                    <img src="img/third.jpg" alt="edifice">
                     <div class="texth">
                         <h2>Our History</h2>
                         <p>
@@ -136,17 +136,11 @@
                             Vestibulum ante ipsum primis in faucibus vestibulum. 
                             Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
                             Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. 
-                            Vestibulum ante ipsum primis sagittis eget. tempus euismod. 
-                            Vestibulum ante ipsum primis in faucibus vestibulum. 
-                            Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
-                            Integer ac pellentesque praesent.
-                            Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. 
-                            Vestibulum ante ipsum primis in faucibus vestibulum. 
-                            Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
+                            Vestibulum ante ipsum primis sagittis eget. tempus euismod.
                         </p>
                     </div>
                 </section>
-                <section class="columns">
+                <section id="columns">
                     <div class="c-item">
                         <h3>Products</h3>
                         <ol class="c-list">
