--- a/semana-04/index.html
+++ b/semana-04/index.html
@@ -41,7 +41,7 @@
             </aside>
             <main>
                 <section id="what-is">
-                    <img src="img/first.jpg" alt="notebook"/>
+                    <img src="img/notebook.jpg"/>
                     <div class="what-info">
                         <h2>What is Trackgenix?</h2>
                         <p>
@@ -98,7 +98,7 @@
                     </div>    
                 </section>
                 <section id="why">
-                    <img src="img/second.jpg" alt="work space">
+                    <img src="img/wework.jpg">
                     <div class="why-info">
                         <h2>Why Trackgenix?</h2>
                         <ul class="us">
@@ -128,7 +128,7 @@
                     </form>
                 </section>
                 <section id="history">
-                    <img src="img/third.jpg" alt="edifice">
+                    <img src="img/institution.jpg">
                     <div class="texth">
                         <h2>Our History</h2>
                         <p>
