BaSP-W05-2022:ex01-variables and operators

--- a/semana-03/index.html
+++ b/semana-03/index.html
@@ -32,7 +32,7 @@
         <main>
             <section id="what-is">
                 <h2>What is Trackgenix?</h2>
-                <img src="img/first.jpg" width="400" alt="notebook" />
+                <img src="img/notebook.jpg" width="400" alt="notebook" />
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -80,7 +80,7 @@
             </section>
             <section id="why">
                 <h2>Why Trackgenix?</h2>
-                <img src="img/second.jpg" width="400" alt="work space">
+                <img src="img/wework.jpg" width="400" alt="work space">
                 <ul class="us">
                     <li class="item">Productivity booster</li>
                     <li class="item">Work traceability</li>
@@ -119,7 +119,7 @@
                     Vestibulum ante ipsum primis in faucibus vestibulum. 
                     Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
                 </p>
-                <img src="img/third.jpg" width="400" alt="edifice">
+                <img src="img/institution.jpg" width="400" alt="edifice">
             </section>
             <section class="columns">
                 <div class="box-list">
