--- a/semana-05/index.html
+++ b/semana-05/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS page</title>
+    <script src="exercises/01_variables_and_operators.js"></script>
+    <script src="exercises/"></script>
+    <script src="exercises/"></script>
+    <script src="exercises/"></script>
+    <script src="exercises/"></script>
+    <script src="exercises/"></script>
 </head>
 <body>
     <h1> Ejercicios de JS</h1>
