--- a/semana-05/index.html
+++ b/semana-05/index.html
@@ -7,7 +7,7 @@
     <title>JS page</title>
     <script src="exercises/01_variables_and_operators.js"></script>
     <script src="exercises/02_strings.js"></script>
-    <script src="exercises/"></script>
+    <script src="exercises/03_arrays.js"></script>
     <script src="exercises/"></script>
     <script src="exercises/"></script>
     <script src="exercises/"></script>
