BaSP-2022:ex04-If Else

--- a/semana-05/index.html
+++ b/semana-05/index.html
@@ -8,7 +8,7 @@
     <script src="exercises/01_variables_and_operators.js"></script>
     <script src="exercises/02_strings.js"></script>
     <script src="exercises/03_arrays.js"></script>
-    <script src="exercises/"></script>
+    <script src="exercises/04_If Else.js"></script>
     <script src="exercises/"></script>
     <script src="exercises/"></script>
 </head>
