--- a/semana-05/index.html
+++ b/semana-05/index.html
@@ -9,7 +9,7 @@
     <script src="exercises/02_strings.js"></script>
     <script src="exercises/03_arrays.js"></script>
     <script src="exercises/04_If Else.js"></script>
-    <script src="exercises/"></script>
+    <script src="exercises/05_for.js"></script>
     <script src="exercises/"></script>
 </head>
 <body>
