BaSP-2022: ex06-function

--- a/semana-05/index.html
+++ b/semana-05/index.html
@@ -10,9 +10,10 @@
     <script src="exercises/03_arrays.js"></script>
     <script src="exercises/04_If Else.js"></script>
     <script src="exercises/05_for.js"></script>
-    <script src="exercises/"></script>
+    <script src="exercises/06_functions.js"></script>
 </head>
 <body>
     <h1> Ejercicios de JS</h1>
+    <h2> Cocci Juan Sebastián</h2>
 </body>
 </html>
